# XLeRobot-Perception-Engine

./: .gitignore  DESIGN.md  README.md  pyproject.toml
configs/: local_demo.yaml  real_head.example.yaml
mybash/: calibrate_head.sh  dryrun_browser.sh  dryrun_opencv.sh  run_real_browser.sh
src/xlerobot_personality/: __init__.py  camera_sources.py  config.py  head_calibrate.py  main.py  orchestrator.py  scene_agent.py  speech.py  tracking_controller.py  web_preview.py  xlerobot_head.py
src/xlerobot_personality.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_orchestrator.py  test_pid.py  test_scene_agent.py  test_speech.py
