[build-system]
requires = ["setuptools>=80.10.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xlerobot-personality"
version = "0.1.0"
description = "Starter system for pan/tilt tracking + scene interaction on XLeRobot head"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.6",
    "opencv-python==4.13.0.92",
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
feetech = ["lerobot[feetech]==0.4.4"]
openai = ["openai>=1.0.0"]
piper = ["piper-tts==1.4.1"]
dev = ["pytest>=8.0"]
yolo = [
    "ultralytics==8.4.21",
]

[project.scripts]
xlerobot-personality = "xlerobot_personality.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
